--- a/HE170292_SE1814-NET_A01/Views/SystemAccount/Update.cshtml
+++ b/HE170292_SE1814-NET_A01/Views/SystemAccount/Update.cshtml
@@ -34,7 +34,7 @@
 
     <div>
         <label>Password:</label>
-        <input type="text" name="AccountPassword" value="@account.AccountPassword"  />
+        <input type="password" name="AccountPassword" value="@account.AccountPassword"  />
         <span style="color: red;">@Html.ValidationMessage("AccountPassword")</span>
     </div>
 
